--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,15 +12,15 @@
     </form>
     <br>
     <form name="CreatNewTruck" th:action="@{/trucks/new}" th:method="get">
-        <input type="submit" value="Создать новый ТС">
+        <input type="submit" value="Создать новый ТС" style="width:180px; height: 30px;font-style: italic">
     </form>
     <br>
     <form name="ToTruckList" th:action="@{/trucks/list}" th:method="get">
-        <input type="submit" value="Список ТС">
+        <input type="submit" value="Список ТС" style="width:180px; height: 30px;font-style: italic">
     </form>
     <br>
     <form name="ToMeasureList" th:action="@{/measure}" th:method="get">
-        <input type="submit" value="Список измерений">
+        <input type="submit" value="Список измерений" style="width:180px; height: 30px;font-style: italic">
     </form>
 </div>
 </body>
