--- a/src/main/resources/templates/deleteMeasure.html
+++ b/src/main/resources/templates/deleteMeasure.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
     <title>Квитанция удалена</title>
 </head>
@@ -32,11 +32,11 @@
     </form>
     <br>
     <form name="ToMeasureList" th:action="@{/measure}" th:method="get">
-        <input type="submit" value="Список измерений">
+        <input class="btnSubmit" type="submit" value="Список измерений">
     </form>
     <br>
     <form name="backToMainMEnu" th:action="@{/}" th:method="get">
-        <input type="submit" value="Назад главное меню"></form>
+        <input class="btnSubmit" type="submit" value="Назад главное меню"></form>
 </div>
 
 </body>
