--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,25 +2,26 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+	<link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
     <title>Рассчет осевых нагрузок</title>
 </head>
 
 <body>
-<div th:align="center">
+<div id="mainMenu" th:align="center">
     <form th:object="${greetingsMessage}">
         <h2 th:text="${greetingsMessage}"></h2>
     </form>
     <br>
-    <form name="CreatNewTruck" th:action="@{/trucks/new}" th:method="get">
-        <input type="submit" value="Создать новый ТС" style="width:180px; height: 30px;font-style: italic">
+    <form name="CreatNewTruck" th:action="@{/trucks/new}" th:method="get" >
+        <input class="btnSubmit" type="submit" value="Создать новый ТС">
     </form>
     <br>
     <form name="ToTruckList" th:action="@{/trucks/list}" th:method="get">
-        <input type="submit" value="Список ТС" style="width:180px; height: 30px;font-style: italic">
+        <input class="btnSubmit" type="submit" value="Список ТС">
     </form>
     <br>
     <form name="ToMeasureList" th:action="@{/measure}" th:method="get">
-        <input type="submit" value="Список измерений" style="width:180px; height: 30px;font-style: italic">
+        <input class="btnSubmit" type="submit" value="Список измерений">
     </form>
 </div>
 </body>
