--- a/src/main/resources/templates/truckCard.html
+++ b/src/main/resources/templates/truckCard.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" type="text/css"/>
     <title>Карточка ТС</title>
 </head>
 <body>
@@ -47,14 +48,14 @@
         </div>
         <br>
 
-        <input type="submit" value="Редактировать">
+        <input class="btnSubmit" type="submit" value="Редактировать">
     </form>
     <br>
     <form name="ToTruckList" th:action="@{/trucks/list}" th:method="get">
-        <input type="submit" value="Список ТС">
+        <input  class="btnSubmit" type="submit" value="Список ТС">
     </form>
     <form name="backToMainMEnu" th:action="@{/}" th:method="get">
-        <input type="submit" value="Главное меню"></form>
+        <input class="btnSubmit" type="submit" value="Главное меню"></form>
 
 </div>
 
