--- a/src/main/resources/templates/truckCard.html
+++ b/src/main/resources/templates/truckCard.html
@@ -8,52 +8,86 @@
 <body>
 <div th:align="center">
     <form th:method="put" th:action="@{/trucks/{id}(id=*{id})}" th:object="${truck}">
+
+        <br>
         <label for="truckId">Id ТС</label>
-        <s id="truckId" th:text="*{id}"></s>
-        <br>
-        <label for="truckNumber">Рег. номер ТС</label>
-        <input id="truckNumber" type="text" th:field="*{truckNumber}"/>
-        <div style="color: crimson" th:errors="*{truckNumber}" th:if="${#fields.hasErrors('truckNumber')}">TruckNumber
-            Error
-        </div>
-        <br>
-        <label for="truckWeight">Масса ТС: </label>
-        <input id="truckWeight" type="text" th:field="*{truckWeight}"/>
-        <label> кг</label>
-        <div style="color: crimson" th:errors="*{truckWeight}" th:if="${#fields.hasErrors('truckWeight')}">FrontPrice
-            Error
-        </div>
-        <br>
-        <label for="firstWheelWeight">Нагрузка на первое колесо: </label>
-        <input id="firstWheelWeight" type="text" th:field="*{firstWheelWeight}"/>
-        <label> кг</label>
-        <div style="color: crimson" th:errors="*{firstWheelWeight}" th:if="${#fields.hasErrors('firstWheelWeight')}">
-            FrontPrice
-            Error
-        </div>
-
-        <br>
-        <label for="frontPrice">Цена деления барометра тягача, кг/0,1 бар:</label>
-        <input id="frontPrice" type="text" th:field="*{frontPrice}"/>
-        <label> кг</label>
-        <div style="color: crimson" th:errors="*{frontPrice}" th:if="${#fields.hasErrors('frontPrice')}">FrontPrice
-            Error
-        </div>
-        <br>
-        <label for="rearPrice">Цена деления баромтера прицепа, кг/0,1 бар:</label>
-        <input id="rearPrice" type="text" th:field="*{rearPrice}"/>
-        <label> кг</label>
-        <div style="color: crimson" th:errors="*{rearPrice}" th:if="${#fields.hasErrors('rearPrice')}">FrontPrice
-            Error
-        </div>
+        <a id="truckId" th:text="*{id}"></a>
         <br>
 
+        <table>
+            <td>
+                <label for="truckNumber">Рег. номер ТС</label>
+                <br>
+                <br>
+                <label for="truckWeight">Масса ТС: </label>
+                <br>
+                <br>
+                <label for="firstWheelWeight">Нагрузка на первое колесо: </label>
+                <br>
+                <br>
+
+                <label for="frontPrice">Цена деления барометра тягача, кг/0,1 бар:</label>
+                <br>
+                <br>
+                <label for="rearPrice">Цена деления баромтера прицепа, кг/0,1 бар:</label>
+                <br>
+                <br>
+            </td>
+
+
+            <td>
+                <br>
+                <input id="truckNumber" type="text" th:field="*{truckNumber}"/>
+                <div style="color: crimson" th:errors="*{truckNumber}" th:if="${#fields.hasErrors('truckNumber')}">
+                    TruckNumber
+                    Error
+                </div>
+                <br>
+                <br>
+                <input id="truckWeight" type="text" th:field="*{truckWeight}"/>
+                <label> кг</label>
+                <div style="color: crimson" th:errors="*{truckWeight}" th:if="${#fields.hasErrors('truckWeight')}">
+                    FrontPrice
+                    Error
+                </div>
+                <br>
+                <br>
+                <input id="firstWheelWeight" type="text" th:field="*{firstWheelWeight}"/>
+                <label> кг</label>
+                <div style="color: crimson" th:errors="*{firstWheelWeight}"
+                     th:if="${#fields.hasErrors('firstWheelWeight')}">
+                    FrontPrice
+                    Error
+                </div>
+                <br>
+                <br>
+                <input id="frontPrice" type="text" th:field="*{frontPrice}"/>
+                <label> кг</label>
+                <div style="color: crimson" th:errors="*{frontPrice}" th:if="${#fields.hasErrors('frontPrice')}">
+                    FrontPrice
+                    Error
+                </div>
+                <br>
+                <br>
+                <input id="rearPrice" type="text" th:field="*{rearPrice}"/>
+                <label> кг</label>
+                <div style="color: crimson" th:errors="*{rearPrice}" th:if="${#fields.hasErrors('rearPrice')}">
+                    FrontPrice
+                    Error
+                </div>
+                <br>
+                <br>
+            </td>
+        </table>
+
+        <br>
         <input class="btnSubmit" type="submit" value="Редактировать">
     </form>
     <br>
     <form name="ToTruckList" th:action="@{/trucks/list}" th:method="get">
-        <input  class="btnSubmit" type="submit" value="Список ТС">
+        <input class="btnSubmit" type="submit" value="Список ТС">
     </form>
+    <br>
     <form name="backToMainMEnu" th:action="@{/}" th:method="get">
         <input class="btnSubmit" type="submit" value="Главное меню"></form>
 
