--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,69 +3,73 @@
 }
 
 
-
 body {
     background-color: azure;
 }
 
 input {
-	width: 160px;
-	height: 20px;
-    border-radius: 1px;
+    width: 160px;
+    height: 20px;
+    border: none;
+    border-radius: 8px;
     font-style: italic;
-	border: 1px solid gray;
+    border: 1px solid gray;
+    background-color: beige;
+    text-align: center;
+}
+
+select {
+    width: 160px;
+    height: 20px;
+    border-radius: 8px;
+    font-style: italic;
+    border: 1px solid gray;
     background-color: beige;
 }
-select
-{
-	width: 160px;
-	height: 20px;
-	border-radius: 1px;
-	font-style: italic;
-	border: 1px solid gray;
-	background-color: beige;
-}
+
 .btnSubmit {
-	padding: 10px;
-	width: 180px;
-	height: 30px;
-	font-size: 16px;
-	border-radius: 1px;
-	font-style: italic;
-	border: 1px solid gray;
-	background-color: #7bd170; //beige
+    padding: 10px;
+    width: 180px;
+    height: 50px;
+    font-size: 16px;
+    border-radius: 8px;
+    font-style: italic;
+    border: 1px solid gray;
+    background-color: #7bd170;
+    text-align: center;
+}
+
+.btnDelete {
+    padding: 2px;
+    width: 120px;
+    height: 20px;
+    border-radius: 8px;
+    font-style: italic;
+    border: 1px solid gray;
+    background-color: #d76c6c;
 
 }
 
-.btnDelete
-{
-	padding: 2px;
-	width: 100px;
-	height: 20px;
-	border-radius: 1px;
-	font-style: italic;
-	border: 1px solid gray;
-	background-color: #d76c6c; //beige
+.btnSubmit\.edit {
+
+    padding: 2px;
+    width: 120px;
+    height: 20px;
+    font-size: 13px;
+    background-color: #7bd170;
 }
 
-.btnSubmit\.edit
-{
-
-	padding: 2px;
-	width: 100px;
-	height: 20px;
-	font-size: 13px;
-	background-color: #7bd170;
-}
 table {
-	border-collapse: collapse;
-	border-width: 3px;
+    border-collapse: collapse;
+    border-width: 3px;
 }
+
 th, td {
-	border: 2px solid;
-	padding: 4px;
-	text-align: center;
+    border: 2px solid;
+    padding: 4px;
+    text-align: center;
 }
+
 th {
-	background-color: beige;
+    background-color: beige;
 }
