--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,10 +10,9 @@ body {
 input {
     width: 160px;
     height: 20px;
-    border: none;
     border-radius: 8px;
     font-style: italic;
-    border: 1px solid gray;
+    border: #e34761;
     background-color: beige;
     text-align: center;
 }
@@ -34,9 +33,11 @@ select {
     font-size: 16px;
     border-radius: 8px;
     font-style: italic;
-    border: 1px solid gray;
+    border: #e34761;
     background-color: #7bd170;
     text-align: center;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
 }
 
 .btnDelete {
@@ -45,7 +46,7 @@ select {
     height: 20px;
     border-radius: 8px;
     font-style: italic;
-    border: 1px solid gray;
+    border: #e34761;
     background-color: #d76c6c;
 
 }
@@ -65,7 +66,6 @@ table {
 }
 
 th, td {
-    border: 2px solid;
     padding: 4px;
     text-align: center;
 }
@@ -73,3 +73,4 @@ th, td {
 th {
     background-color: beige;
 }
+
