--- a/src/main/resources/templates/truckCard.html
+++ b/src/main/resources/templates/truckCard.html
@@ -15,28 +15,8 @@
         <br>
 
         <table>
-            <td>
+            <td style="text-align: right" >
                 <label for="truckNumber">Рег. номер ТС</label>
-                <br>
-                <br>
-                <label for="truckWeight">Масса ТС: </label>
-                <br>
-                <br>
-                <label for="firstWheelWeight">Нагрузка на первое колесо: </label>
-                <br>
-                <br>
-
-                <label for="frontPrice">Цена деления барометра тягача, кг/0,1 бар:</label>
-                <br>
-                <br>
-                <label for="rearPrice">Цена деления баромтера прицепа, кг/0,1 бар:</label>
-                <br>
-                <br>
-            </td>
-
-
-            <td>
-                <br>
                 <input id="truckNumber" type="text" th:field="*{truckNumber}"/>
                 <div style="color: crimson" th:errors="*{truckNumber}" th:if="${#fields.hasErrors('truckNumber')}">
                     TruckNumber
@@ -44,16 +24,16 @@
                 </div>
                 <br>
                 <br>
+                <label for="truckWeight">Масса ТС, кг: </label>
                 <input id="truckWeight" type="text" th:field="*{truckWeight}"/>
-                <label> кг</label>
                 <div style="color: crimson" th:errors="*{truckWeight}" th:if="${#fields.hasErrors('truckWeight')}">
                     FrontPrice
                     Error
                 </div>
                 <br>
                 <br>
+                <label for="firstWheelWeight">Нагрузка на первое колесо, кг: </label>
                 <input id="firstWheelWeight" type="text" th:field="*{firstWheelWeight}"/>
-                <label> кг</label>
                 <div style="color: crimson" th:errors="*{firstWheelWeight}"
                      th:if="${#fields.hasErrors('firstWheelWeight')}">
                     FrontPrice
@@ -61,22 +41,21 @@
                 </div>
                 <br>
                 <br>
+                <label for="frontPrice">Цена деления барометра тягача, кг/0,1 бар:</label>
                 <input id="frontPrice" type="text" th:field="*{frontPrice}"/>
-                <label> кг</label>
                 <div style="color: crimson" th:errors="*{frontPrice}" th:if="${#fields.hasErrors('frontPrice')}">
                     FrontPrice
                     Error
                 </div>
                 <br>
                 <br>
+                <label for="rearPrice">Цена деления баромтера прицепа, кг/0,1 бар:</label>
                 <input id="rearPrice" type="text" th:field="*{rearPrice}"/>
-                <label> кг</label>
                 <div style="color: crimson" th:errors="*{rearPrice}" th:if="${#fields.hasErrors('rearPrice')}">
                     FrontPrice
                     Error
                 </div>
-                <br>
-                <br>
+
             </td>
         </table>
 
