Added tests MeasureServiceTestEmbeddedBase.java TruckServiceTestsEmbeddedBase.java scripts for Embadded Tests

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -36,7 +36,7 @@ select {
     border: #e34761;
     background-color: #7bd170;
     text-align: center;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 
 }
 
