--- a/src/main/resources/templates/truckCard.html
+++ b/src/main/resources/templates/truckCard.html
@@ -6,17 +6,27 @@
     <title>Карточка ТС</title>
 </head>
 <body>
+
+
 <div th:align="center">
+    <form th:object="${greetingsMessage}">
+        <h2 th:text="${greetingsMessage}"></h2>
+    </form>
+
+    <br>
+    <h3>Карточка транспортного средства</h3>
+
+
     <form th:method="put" th:action="@{/trucks/{id}(id=*{id})}" th:object="${truck}">
 
         <br>
-        <label for="truckId">Id ТС</label>
+        <label style="font-weight: bold" for="truckId">Id ТС: </label>
         <a id="truckId" th:text="*{id}"></a>
         <br>
 
         <table>
             <td style="text-align: right">
-                <label for="truckNumber">Рег. номер ТС</label>
+                <label for="truckNumber">Рег. номер ТС:</label>
                 <input id="truckNumber" type="text" th:field="*{truckNumber}"/>
                 <div style="color: crimson" th:errors="*{truckNumber}" th:if="${#fields.hasErrors('truckNumber')}">
                     TruckNumber
@@ -24,7 +34,7 @@
                 </div>
                 <br>
                 <br>
-                <label for="truckWeight">Масса ТС, кг: </label>
+                <label for="truckWeight">Вес порожнего ТС, кг: </label>
                 <input id="truckWeight" type="text" th:field="*{truckWeight}"/>
                 <div style="color: crimson" th:errors="*{truckWeight}" th:if="${#fields.hasErrors('truckWeight')}">
                     FrontPrice
